--- a/vue-front/tbCrawler/src/components/home/home.less
+++ b/vue-front/tbCrawler/src/components/home/home.less
@@ -2,10 +2,9 @@
     height: 135px;
 }
 .avator-img{
-    display: block;
-    width: 80%;
-    max-width: 100px;
-    height: auto;
+  display: block;
+  width: 100%;
+  height: 90%;
 }
 .card-user-infor-name{
     font-size: 2em;
